# MyTradingAgent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  health.py  main.py  telegram_bot.py
app/core/: __init__.py  alpha.py  attestation.py  audit.py  backtest.py  compliance.py  correlation.py  data_quality.py  execution.py  indicators.py  models.py  order_router.py  playbook.py  portfolio.py  research.py  risk.py  scanner.py  sentinel.py  slippage.py  strategy.py  swarm.py  universe.py  var.py
app/exchanges/: base.py  bitget.py  paper.py
app/services/: risk_go_client.py
app/storage/: base.py  factory.py  postgres.py  sqlite.py  supabase.py
deployment/: render.md  risk-service-render.md  supabase_schema.sql
services/indicators-rust/: Cargo.toml
services/indicators-rust/src/: main.rs
services/risk-go/: Dockerfile  go.mod  main.go
tests/: test_execution.py  test_institutional_layers.py  test_platform_layers.py  test_risk.py  test_storage.py
tools/: market_schema.ts
