[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-trading-agent"
version = "0.1.0"
description = "Telegram-approved Bitget trading agent scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ccxt>=4.4.0",
  "python-dotenv>=1.0.1",
  "python-telegram-bot>=21.6",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
